Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30032

Terminal never receives Ctrl+K

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 13.0.0-beta1
    • Qt Creator 12.0.1
    • Terminal
    • None
    • Ubuntu 22.04 LTS
      bash 5.1.16
    • a3b9393bc (master)

      I can reproduce the following regardless of the state of the terminal's "shortcuts" button in step 3.

      1. In the built-in terminal view, type some input at the command prompt.
      2. Move the cursor to some place in the middle of this input.
      3. Press Ctrl+K.
        This should remove characters right of the cursor from the prompt.

      Instead, the Locator pops up.

        For Gerrit Dashboard: QTCREATORBUG-30032
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes