Terminal: Do not unlock the locator

Ctrl+K is a useful shortcut for some users, so we have to block the locator if the keyboard is locked.

Fixes: QTCREATORBUG-30032
Change-Id: I211e0bc449d3981513cc77bd14baf70a9acc3ae1
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>